// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet Card should render 1`] = `
<div>
  <a
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
    href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/wallets/ac38fe6d-4b67-4ef1-85be-17c5f6841129"
  >
    <div
      class="w-64 inline-block undefined"
    >
      <div
        class="sc-AxirZ PHAyy"
        data-testid="ProfileCard"
      >
        <div
          class="relative p-2"
        >
          <div
            class="absolute -right-2 -top-1 text-theme-neutral-400 hover:text-theme-neutral-500"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right outline-none cursor-pointer focus:outline-none"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute right-3 -top-1"
          />
          <div
            class="flex"
          >
            <div
              class="sc-AxhCb bzWLYJ border-theme-primary-contrast -mr-2 undefined"
            >
              <div
                class="sc-AxiKw ccPfUV"
                height="16"
                width="18"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <div
            class="mt-6 truncate max-w-12"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                ARK Wallet 1
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr…YUYD
              </span>
            </div>
          </div>
          <div
            class="font-bold text-theme-neutral-900"
          >
            1000
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Wallet Card should render blank 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__blank"
  >
    <div
      class="sc-AxirZ PHAyy"
      data-testid="ProfileCard"
    >
      <div
        class="p-2"
      >
        <div>
          <div
            class="sc-AxhCb bzWLYJ -mr-2 bg-white border-theme-primary-contrast"
          />
          <div
            class="sc-AxhCb bzWLYJ bg-white border-theme-primary-contrast"
          />
        </div>
        <div
          class="mt-6 text-md text-theme-primary-contrast undefined"
        >
          New wallet
        </div>
        <div
          class="mt-1 text-md text-theme-primary-contrast my-px undefined"
        >
          Balance
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render with wallet data 1`] = `
<div>
  <a
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
    href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/wallets/ac38fe6d-4b67-4ef1-85be-17c5f6841129"
  >
    <div
      class="w-64 inline-block undefined"
    >
      <div
        class="sc-AxirZ PHAyy"
        data-testid="ProfileCard"
      >
        <div
          class="relative p-2"
        >
          <div
            class="absolute -right-2 -top-1 text-theme-neutral-400 hover:text-theme-neutral-500"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right outline-none cursor-pointer focus:outline-none"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute right-3 -top-1"
          />
          <div
            class="flex"
          >
            <div
              class="sc-AxhCb bzWLYJ border-theme-primary-contrast -mr-2 border-theme-warning-200"
            >
              <div
                class="sc-AxiKw ccPfUV"
                height="16"
                width="18"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <div
            class="mt-6 truncate max-w-12"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                My wallet
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr…YUYD
              </span>
            </div>
          </div>
          <div
            class="font-bold text-theme-neutral-900"
          >
            1000
          </div>
        </div>
      </div>
    </div>
  </a>
  ,
</div>
`;

exports[`Wallet Card should render with wallet data and optional icon 1`] = `
<div>
  <a
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
    href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/wallets/ac38fe6d-4b67-4ef1-85be-17c5f6841129"
  >
    <div
      class="w-64 inline-block undefined"
    >
      <div
        class="sc-AxirZ PHAyy"
        data-testid="ProfileCard"
      >
        <div
          class="relative p-2"
        >
          <div
            class="absolute -right-2 -top-1 text-theme-neutral-400 hover:text-theme-neutral-500"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right outline-none cursor-pointer focus:outline-none"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute right-3 -top-1"
          />
          <div
            class="flex"
          >
            <div
              class="sc-AxhCb bzWLYJ border-theme-primary-contrast -mr-2 border-theme-warning-200"
            >
              <div
                class="sc-AxiKw ccPfUV"
                height="16"
                width="18"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <div
            class="mt-6 truncate max-w-12"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                My wallet
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr…YUYD
              </span>
            </div>
          </div>
          <div
            class="font-bold text-theme-neutral-900"
          >
            1000
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
